# rye-update-bot

./: LICENSE  README.md  pyproject.toml
.github/workflows/: update-dependencies.yml
