[project]
name = "rye-update-bot"
version = "0.1.0"
description = "This is a sample project for the rye-update-bot"
authors = [
    { name = "Fabian Clemenz", email = "fabian.clemenz@devsuit.de" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "fastapi==0.114.0",
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest==8.3.3",
]
